# homelab-cm

./: .ansible-lint  .ansible-lint.yaml  .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Gemfile  Makefile  README.md  Vagrantfile  ansible.cfg  authorized_keys  autoinstall.pkrtpl.hcl  conftest.py  ctrservers.yaml  dev-requirements.txt  development  hldiag.py  k8s-nodes.pkr.hcl  localhost.j2  package-lock.json  package.json  preseed.cfg.j2  preseed.pkrtpl.hcl  production  production.j2  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  requirements.yaml  site.yaml  vagrant-customizations.yaml  vagrant_ansible_vars.json  vagrant_customizations.yaml  xcp-ng.pkr.hcl
docs/: code.md  dictionary.txt  homelab-shapes.xml  infrastructure.md  staging-homelab.drawio
examples/: vagrant_ansible_vars.json
group_vars/: ctrservers
localhost-k8s-cluster/: .terraform.lock.hcl  main.tofu  variables.tofu
meta/: requirements.yml
mitmproxy/: Makefile  requirements-dev.txt
packer/: box-catalog.json
playbooks/: all.yml  ansible_controllers.yml  ctrservers.yaml  ctrservers.yml  dhcp_servers.yml  dns_servers.yml  irc_clients.yaml  irc_clients.yml  k8s.yml  k8s_apps.yml  k8s_containerd_workers.yml  k8s_controllers.yml  k8s_post_controllers.yml  k8s_workers.yml  kvm_vagrant_boxes.yml  load_balancers.yml  localhost.yml  maintenance.yml  managed.yml  nfs_clients.yml  nfs_servers.yml  on_prem.yml  packer_customizations.yml  proxy_servers.yml  site.yaml  site.yml  vagrant_customizations.yaml  vagrant_customizations.yml  (+2 more)
(+279 files in other folders)
