[project]
name = "homelab-cm"
version = "1.0.0"
description = "My approach to configuration management (cm) for my homelab."
requires-python = ">=3.10,<3.11"

[[authors]]
name = "Conner Crosby"
email = "cavcrosby@gmail.com"

[license]
file = "./LICENSE"

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
    "SIM",
    "D",
    "E501"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
