[project]
name = "homelab-cm"
version = "1.0.0"
description = "My approach to configuration management (cm) for my homelab."
requires-python = ">=3.14,<3.15"
license-files = ["LICENSE"]
authors = [{ name = "Conner Crosby", email = "cavcrosby@gmail.com" }]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I", "UP", "SIM", "D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
